--- a/hw/4/4.md
+++ b/hw/4/4.md
@@ -44,3 +44,31 @@ end
     end
 end
   ```
+2.)
+```Bash
+function speedTest(InVec, x)
+tic
+convertTempWhile(InVec, x)
+toc
+tic
+convertTempFor(InVec, x)
+toc
+tic
+ConvertTempVec(InVec, x)
+toc
+end
+```
+3.)
+```Bash
+function [s] = extractLetter(x)
+s = '';
+for i = 1:length(x)
+    for j = 1:length(x{i})
+        s = strcat(s, x{i}(j));
+    end
+end
+disp(s)
+end
+```
+4.) 
+This code takes an original value, in this case 2.0, and begins to root and square it. On the first iteration, the program first find the square root of 2, then squares the result, and displays the new number. On the second iteration, the program takes the square root of 2, takes the root again, and then squares the result twice. This is repeated for n = 1:60
