--- a/hw/4/4.md
+++ b/hw/4/4.md
@@ -71,4 +71,30 @@ disp(s)
 end
 ```
 4.) 
-This code takes an original value, in this case 2.0, and begins to root and square it. On the first iteration, the program first find the square root of 2, then squares the result, and displays the new number. On the second iteration, the program takes the square root of 2, takes the root again, and then squares the result twice. This is repeated for n = 1:60
+This code takes an original value, in this case 2.0, and begins to root and square it. On the first iteration, the program first finds the square root of 2, then squares the result, and displays the new number. On the second iteration, the program takes the square root of 2, takes the root again, and then squares the result twice. This is repeated for n = 1:60
+As n grows, the final output values begins to deviate away from 2 and ultimately becomes 1. This is because the square root of 2 is an irrational number, which are impossible to hold in computer memory. Instead, when dealing with irrational numbers, computers round off the value. As this program repeatedly rounds the value of root(2), it degrades down to 1.
+
+
+5.)
+This code takes a variable (eps) and sets it to 1. It then compares eps+1 to eps. If they are not equal, then it displays(eps) and divides eps by 2. It then repeats this process until 1 == 1+eps. Ultimately, as eps is constatly decreasing, 1~=eps+1 becomes false because round off errors cause eps to be treated as 0 for increasingly small values of eps. Although eps never actually is equal to 0 mathematically, computers cannot hold infinitely small values accurately, just like they can't hold infinately long irrational numbers, and eps evenutally gets rounded down to zero. 
+
+6.)
+```Bash
+function [y] = getLargestPrime(x)
+if x < 0 || rem(x,1) ~= 0
+    error('Input is not a nonnegative integer')
+elseif x == 0
+    disp('There are no primes smaller than 0')
+elseif x == 1
+    disp('There are no primes smaller than 1')
+elseif x == 2
+    disp('2 is the smallest prime number')
+else
+for i=x-1:-1:0
+    if isprime(i)
+        y = i;
+        break
+    end
+end
+end
+```
