--- a/quiz/q5/q5.md
+++ b/quiz/q5/q5.md
@@ -1,5 +1,11 @@
 1.)
 ```Bash
+
+
+
+```
+2.)
+```Bash
 function [data] = robustWebRead(url)
 try
 data = webread(url);
@@ -9,3 +15,4 @@ end
 end
 ```
 
+3.) gcf returns the current figure handle, whice gca return the current figure chart.
