--- a/hw/6/6.md
+++ b/hw/6/6.md
@@ -43,4 +43,7 @@ function totalLogProb = getLogProbNorm(x)
     end
     totalLogProb = - sum (logprob);
 end
+
+>> findBestFitParameters
+mu: -0.082001 , sigma: 1.0043
 ```
